<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWishItems"
        android:layout_width="415dp"
        android:layout_height="603dp"
        android:background="#D4E5FF"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/urlEditText"
        android:layout_width="241dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:ellipsize="end"
        android:hint="@string/url_link"
        android:maxLines="1"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameEditText"
        android:layout_width="189dp"
        android:layout_height="49dp"
        android:layout_marginBottom="52dp"
        android:ellipsize="end"
        android:hint="@string/name"
        android:maxLines="1"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/urlEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/priceEditText"
        android:layout_width="106dp"
        android:layout_height="52dp"
        android:layout_marginBottom="52dp"
        android:ellipsize="start"
        android:hint="@string/_0_00"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral60"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/urlEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="106dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:background="#4B1010"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/urlEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/urlEditText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#731515"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/sherpa_s_wishlist"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#DED2D2"
        android:paddingTop="15dp"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>